infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autohub-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - 35.192.141.65.nip.io
    secretName: autohub-tls

  rules:
  - host: 35.192.141.65.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autohub-service
            port:
              number: 80
